Fix overlaping highlighting in titles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,6 +97,7 @@ a {
 h1 {
 	font-weight: 700;
 	font-size: 40px;
+    line-height: 1.3;
 }
 
 h1:after {
